fixing overflow

--- a/src/partials/_baseStyles.scss
+++ b/src/partials/_baseStyles.scss
@@ -3,8 +3,8 @@ html {
     background-color: $cream;
 }
 
-body {
-    
+html, body {
+    max-width: 100%;
     overflow-x: hidden;
 }
 
