--- a/src/partials/_footer.scss
+++ b/src/partials/_footer.scss
@@ -2,7 +2,7 @@ footer {
     width: 100%;
     display: flex;
     background-color: $cream;
-    padding:30px;
+    padding:30px 0;
     flex-direction: column;
     text-align: center;
     p {
