--- a/styles/App.css
+++ b/styles/App.css
@@ -268,7 +268,8 @@ html {
   background-color: #FAF9F6;
 }
 
-body {
+html, body {
+  max-width: 100%;
   overflow-x: hidden;
 }
 
@@ -559,7 +560,7 @@ footer {
   width: 100%;
   display: flex;
   background-color: #FAF9F6;
-  padding: 30px;
+  padding: 30px 0;
   flex-direction: column;
   text-align: center;
 }
